--- a/views/adminLoginBody.hbs
+++ b/views/adminLoginBody.hbs
@@ -84,7 +84,7 @@
 						required: true
 					}
 				},
-				messages:{ --}}
+				messages:{
 					emailOrUsername:{
 						required: "<font color = 'red'>Please enter your email id or username.</font>"
 					},
